Fix most issues

--- a/CrmPackage/WebResources/Web Page (HTML)/arup_clientgroupingmatrix.htm
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_clientgroupingmatrix.htm
@@ -4658,7 +4658,7 @@
         }
 
         function getDataforUser(userid, id) {
-            debugger;
+            // debugger;
             if (userid == "100") {
                 PopulateConnection(true, true, true, true, true);
             }
