1. 89576 - IndiaCOmpanyFilter is applied for external opportunity only 2. 88914 - Hide 'Click here for PJN Cost button' when 'PJN Cost' tab is not visible

--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -425,6 +425,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'action': function () {
                         DisplayTab("PJN_Costs_Tab", this);
                     },
+                    'hidden': function () { return !parent.Arup.IsPJNCostTabVisible(formContext); },
                     'isredbutton': false
                 },              
                 {
